fixing images and contrast

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ a {
     color: #4cceac;
 }
 
+.breadcrumbs-nav-light {
+    color: black;
+}
+
 img {
     width: 100%;
     height: 200px;
